/**
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package aredee.mesos.frameworks.accumulo;

option java_outer_classname = "Protos";

/**
 * Framework
 */
message FrameworkIdentity {

    /**
     * ID of the framework.
     * Upon initial framework registration Mesos will generate the framework id and return it as part of Scheduler.registered.
     * The framework will use this value (if set) when it restarts and re-registers with Mesos
     */
    optional string frameworkId = 1;

    /**
     * Name for the framework that's more convenient to use than the framework id.
     *
     */
    optional string frameworkName = 2;
}

message RegisteredFrameworks {
    repeated FrameworkIdentity frameworks = 1;
}

message FrameworkConfiguration {
    required FrameworkIdentity id = 1;
    optional string accumuloInstance = 2;
}

message ClusterStatus {
  enum ClusterState {
      STARTING_UP = 0;
      AWAITING_MORE_RESOURCES = 1;
      RUNNING = 2;
      SHUTTING_DOWN = 3;
  }

  optional ClusterState state = 1;

}
